--- a/Fun_With_Jake/CMakeLists.txt
+++ b/Fun_With_Jake/CMakeLists.txt
@@ -4,6 +4,10 @@ project(Workspace VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+include(CPack)
 
 add_library(ex_01_01_library "workspace.cpp" "workspace.h")
 add_executable(ex_01_01_exe "main_workspace.cpp" "workspace.cpp")
+
